--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-font": "^11.1.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-safe-area-context": "^4.5.3"
