--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-font": "^11.1.1",
@@ -17,7 +19,8 @@
     "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-safe-area-context": "^4.5.3"
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
